modifide Login Component & New Inspection Form - added login reducer - added method save authorized in localStorage - added modal for add Violation Items & Count - added login api service Issue: IPR-11

--- a/src/translations/ar/common.json
+++ b/src/translations/ar/common.json
@@ -40,7 +40,9 @@
     "closeButton": "Close",
     "addSignature": "Add Signature",
     "cancel": "Cancel & Return",
-    "withOutSubmit": "Save Without Submitting"
+    "withOutSubmit": "Save Without Submitting",
+    "addViolation": "Add Violation",
+    "violations": "Violations List"
   },
   "login": {
     "email": "Email",
