--- a/src/translations/ar/common.json
+++ b/src/translations/ar/common.json
@@ -1,33 +1,33 @@
 {
   "inspections": {
-    "shopName": "Shop Name",
-    "inspectionType": "Inspection Type",
-    "inspectionDate": "Inspection Date",
-    "inspectorName": "Employee Name",
-    "violationsCount": "Violation Count",
+    "shopName": "اسم المنشأة / المحل",
+    "inspectionType": "نوع التفتيش",
+    "inspectionDate": "تاريخ التفتيش",
+    "inspectorName": "اسم المفتش",
+    "violationsCount": "عدد المخالفات",
     "btnNewInspection": "New Inspection",
-    "startTime": "Inspection Start Time",
-    "violation": "Does the shop contain any violation?",
-    "complain": "Complain No.",
-    "shopLocation": "Shop Location",
-    "ownerName": "Owner Name",
-    "ownerPhone": "Owner Phone Number",
-    "ownerId": "Owner ID No.",
-    "licenseNumber": "License No.",
-    "licenseDate": "License Date",
-    "inspectionTime": "Inspection Time",
-    "employeeName": "Employee Name",
-    "employeeId": "Employee ID No.",
-    "nationality": "Nationality",
+    "startTime": "وقت بداية التفتيش",
+    "violation": "هل المنشأة تحتوي على مواد مخالفة؟",
+    "complain": "رقم الشكوى",
+    "shopLocation": "الموقع",
+    "ownerName": "اسم المالك",
+    "ownerPhone": "رقم جوال المالك",
+    "ownerId": "رقم السجل المدني للمالك",
+    "licenseNumber": "رقم الرخصة",
+    "licenseDate": "تاريخ الرخصة",
+    "inspectionTime": "وقت التفتيش",
+    "employeeName": "اسم الموظف",
+    "employeeId": "رقم الهوية / الإقامة للموظف",
+    "nationality": "جنسية الموظف",
     "violationItems": "Violation Items",
-    "notes": "Notes",
+    "notes": "ملاحظات",
     "shopPersonName": "Shop Person In-Charge Name",
     "signature": "Signature",
     "shopPersonNationality": "Shop Person In-Charge Nationality",
-    "shopPersonId": "Shop Person In-Charge ID",
-    "inspectionSignature": "Inspection Signature",
-    "inspectionEndTime": "Inspection End Time",
-    "attachments": "Attachments",
+    "shopPersonId": "اسم الموظف المسؤول",
+    "inspectionSignature": "توقيع المفتش",
+    "inspectionEndTime": "وقت نهاية التفتيش",
+    "attachments": "المرفقات",
     "submitButton": "Submit Form",
     "yes": "Yes",
     "no": "No",
@@ -45,10 +45,14 @@
     "violations": "Violations List"
   },
   "login": {
-    "email": "Email",
-    "password": "Password",
+    "email": "اسم المستخدم",
+    "password": "كلمة السر",
     "loginButton": "Login",
     "emailRequired": "Email is Required",
     "passwordRequired": "Password is Required"
+  },
+  "code": {
+    "en": "en",
+    "ar": "عربي"
   }
 }
